mdapi_output_dir/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Activity_Date_1__c</fullName>
        <label>ABM Email 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Date_2__c</fullName>
        <label>ABM Email 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Date_3__c</fullName>
        <label>Activity_Date_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clear_Tracking__c</fullName>
        <label>Clear Tracking</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Trigger__c</fullName>
        <description>Used to allow for triggering a field update from the last activity.</description>
        <inlineHelpText>Used to allow for triggering a field update from the last activity.</inlineHelpText>
        <label>Last Activity Trigger</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Call__c</fullName>
        <label>Last Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Email__c</fullName>
        <label>Last Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reset_Tracking__c</fullName>
        <label>Reset Tracking</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X10th_Call_Sent__c</fullName>
        <label>10th Call Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X10th_Email_Sent__c</fullName>
        <label>10th Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X1st_Call_Sent__c</fullName>
        <label>1st Call Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X1st_Email_Sent__c</fullName>
        <label>1st Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X2nd_Call_Sent__c</fullName>
        <label>2nd Call Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X2nd_Email_Sent__c</fullName>
        <label>2nd Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X3rd_Call_Sent__c</fullName>
        <label>3rd Call Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X3rd_Email_Sent__c</fullName>
        <label>3rd Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X4th_Call_Sent__c</fullName>
        <label>4th Call Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X4th_Email_Sent__c</fullName>
        <label>4th Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X5th_Call_Sent__c</fullName>
        <label>5th Call Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X5th_Email_Sent__c</fullName>
        <label>5th Email Sent</label>
        <type>DateTime</type>
    </fields>
</CustomObject>